--- a/scripts/usr/local/bin/debian-libreoffice-1.1.5
+++ b/scripts/usr/local/bin/debian-libreoffice-1.1.5
@@ -60,5 +60,6 @@ docker run -v /etc/localtime:/etc/localtime:ro \
            -v ${HOME}/.Xauthority:${HOME}/.Xauthority \
            -v ${HOME}/.config/docker/libreoffice:/root \
            -v ${HOME}/Documents:/documents \
+           -v /media/sf_Stories:/stories \
            --name=debian-libreoffice-1.1.5 \
        ewsdocker/debian-libreoffice:1.1.5
