Modified to use gtk2 instead of gtk3, debian-bash-gui:9.5.2, fixed file names

--- a/scripts/usr/local/bin/debian-libreoffice-gtk2-9.5.5
+++ b/scripts/usr/local/bin/debian-libreoffice-gtk2-9.5.5
@@ -60,7 +60,7 @@ docker run -v /etc/localtime:/etc/localtime:ro \
            -v ${HOME}/.Xauthority:${HOME}/.Xauthority \
            -v ${HOME}/Documents:/documents \
            -v /media/sf_Stories:/stories \
-           -v ${HOME}/.config/docker/debian-libreoffice-9.5.5:/root \
-           --name=debian-libreoffice-9.5.5 \
-       ewsdocker/debian-libreoffice:9.5.5  
+           -v ${HOME}/.config/docker/debian-libreoffice-gtk2-9.5.5:/root \
+           --name=debian-libreoffice-gtk2-9.5.5 \
+       ewsdocker/debian-libreoffice:gtk2-9.5.5  
        
